# ecommerce-scraper

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  README.MD  dockerfile  makefile  memory.md  proxy-ports.txt  pyproject.toml  readme.txt  run_crawler.py  run_image_downloader.py  run_image_pipeline.py  run_quality_gate.py  scraper_pipeline.md  scrapy.cfg
config/: environments.yaml
context/: AGENTS.md  REPO_CHARTER.md  memory.md  product-brief.md
docs/: fail_quality_contract.md  image_downloader_blob_contract.md
ecommercecrawl/: env_config.py  image_downloader.py  items.py  middlewares.py  pipelines.py  quality_gate.py  settings.py
resources/: Free_Proxy_List.txt  farfetch_urls.csv  image_download_smoke_100.jsonl  image_download_test_jobs.jsonl  ounass_urls.csv
scripts/: backfill_manifests.py  ecs_overrides.py  image_quality_checker.py  secret_json_to_exports.py
tests/: farfetch_html_fixtures.py  level.py  test_bronze_manifest_verifier.py  test_crawler_api.py  test_farfetch.py  test_farfetch_rules.py  test_image_downloader.py  test_level.py  test_level_rules.py  test_mastercrawl.py  test_ounass.py  test_ounass_rules.py  test_pipeline.py  test_quality_gate.py  test_run_crawler.py  test_run_image_downloader.py  test_run_quality_gate.py  test_settings.py
tickets/: crawl_observability.md  crawl_quality_raw.md  crawl_scheduler.md  env-config-infra.md  frontend_v0_discussion.md  image_download_error_observability.md  image_pipeline.md  image_pipeline_trigger.md  image_serving.md  plp_debug_ui.md  product_api.md  recrawl_loop.md  website_description.md
(+39 files in other folders)
