[tool.poetry]
name = "ecommercecrawl"
version = "0.1.0"
description = ""
authors = ["Tarik El Lel <tareklel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.2"
Faker = "^14.2.0"
numpy = "^1.23.3"
scrapy-user-agents = "^0.1.1"
pandas = "^1.5.0"
scrapy-proxies = "^0.4"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
